
  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12181. Fix intermittent test failure of TestZKSignerSecretProvider.
    (Masatake Iwasaki via wheat9)

    HADOOP-12611. TestZKSignerSecretProvider#testMultipleInit occasionally fail.
    (ebadger via rkanter)

    HADOOP-14842. Hadoop 2.8.2 release build process get stuck due to java
    issue. Contributed by Junping Du.

Release 2.7.5 - 2017-12-14

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-13442. Optimize UGI group lookups. (Daryn Sharp via kihwal, shv)

    HADOOP-14827. Allow StopWatch to accept a Timer parameter for tests.
    (Erik Krogen via jlowe)

    HADOOP-14867. Update HDFS Federation setup document, for incorrect
    property name for secondary name node http address.
    (Bharat Viswanadham via Arpit Agarwal)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-14702. Fix formatting issue and regression caused by conversion from
    APT to Markdown. (Doris Gu via iwasakims)

    HADOOP-14881. LoadGenerator should use Time.monotonicNow() to measure
    durations. (Bharat Viswanadham via jlowe)

    HADOOP-14902. LoadGenerator#genFile write close timing is incorrectly
    calculated. (Hanisha Koneru via jlowe)

    HADOOP-14919. BZip2 drops records when reading data in splits. (Jason Lowe)

Release 2.7.4 - 2017-08-04

  INCOMPATIBLE CHANGES

    HADOOP-13812. Upgrade Tomcat to 6.0.48. (John Zhuge via aajisaka)

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12259. Utility to Dynamic port allocation (brahmareddy via rkanter)

    HADOOP-10597. RPC Server signals backoff to clients when all request
    queues are full. (Ming Ma via Arpit Agarwal)

    HADOOP-12325. RPC Metrics : Add the ability track and log slow RPCs.
    (Anu Engineer via xyao)

    HADOOP-10300. Allowed deferred sending of call responses. (Daryn Sharp via
    yliu)

    HADOOP-13782. Make MutableRates metrics thread-local write, 
    aggregate-on-read. (Erik Krogen via zhz)
